Footer complete, updated

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -49,8 +49,8 @@ html
             .ora-header-stack
               .ora-header-quote
               .ora-header-socials
-                a.fab.fa-instagram(href="/" title="todo")
-                a.fab.fa-facebook-f(href="/" title="todo")
+                a.fab.fa-instagram(href="https://www.instagram.com/offroad_addiction_swo" title="Follow us on Instagram")
+                a.fab.fa-facebook-f(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
                 a.fab.fa-twitter(href="/" title="todo")
                 a.fab.fa-youtube(href="/" title="todo")
       // Hero Section ----------------------------------------:
@@ -242,9 +242,14 @@ html
                 |Monday – Friday: 9am - 6pm<br/>Saturday: 9am - 2pm<br/>Sunday: Closed
             .ora-footer-contact-box
               p
-                |Phone: 519-451-6076<br/>Toll Free: 1-87-309-7623<br/>Fax: 519-637-7373
+                |Phone: 519-451-6076<br/>Toll Free: 1-877-309-7623<br/>Fax: 519-637-7373
             .ora-footer-contact-box
-              a.zuc-social-link(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
-                i.fab.fa-facebook-f
               a.zuc-social-link(href="https://www.instagram.com/offroad_addiction_swo" title="Follow us on Instagram")
                 i.fab.fa-instagram
+              a.zuc-social-link(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
+                i.fab.fa-facebook-f
+              a.zuc-social-link(href="/" title="todo")
+                i.fab.fa-twitter
+              a.zuc-social-link(href="/" title="todo")
+                i.fab.fa-youtube
+              
