--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -54,6 +54,8 @@ html
                 a.fab.fa-twitter(href="/" title="todo")
                 a.fab.fa-youtube(href="/" title="todo")
       // Hero Section ----------------------------------------:
+      .ora-dream-hero
+        
       // Split Section ----------------------------------------:
       // Builds Section ----------------------------------------:
       // Review Section ----------------------------------------:
