bg responsiveness done, hero

--- a/assets/styles/p2/ora-header.scss
+++ b/assets/styles/p2/ora-header.scss
@@ -4,6 +4,7 @@
   background-color: $ora-darkgrey;
   display: flex;
   justify-content: center;
+  padding-bottom: 15px;
 }
 
 .ora-header-content {
