--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -55,7 +55,19 @@ html
                 a.fab.fa-youtube(href="/" title="todo")
       // Hero Section ----------------------------------------:
       .ora-dream-hero
-        
+        .ora-dream-hero-content
+          .ora-dream-hero-bigtext
+          .ora-dream-hero-image
+          .ora-dream-hero-smalltext
+            h3
+              |get started with <br>a free quote on parts, accessories or custom builds
+        .ora-dream-hero-bg
+          .ora-dream-hero-bg-grid
+            .ora-dream-hero-bg-grid-item.--rock
+            .ora-dream-hero-bg-grid-item.--mud
+            .ora-dream-hero-bg-grid-item.--road
+            .ora-dream-hero-bg-grid-item.--ice
+          .ora-dream-hero-bg-green
       // Split Section ----------------------------------------:
       // Builds Section ----------------------------------------:
       // Review Section ----------------------------------------:
