Hero done at laptop up

--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -63,26 +63,25 @@
   background: $ora-green;
   color: $ora-darkgrey;
   transition: .4s;
-  font-size: vw-phone(16);
+  font-size: 16px;
   padding: vw-phone(15) 1vw;
 
   @media #{$tablet-up} {
-    font-size: vw-tablet(18.5);
+    font-size: 18.5px;
     padding: vw-tablet(20) 1vw;
   }
 
   @media #{$tablet-lnd-only} {
-    font-size: vw-tablet(18.5);
+    font-size: 18.5px;
     padding: vw-laptop(13) 1vw;
   }
 
   @media #{$laptop-up} {
-    font-size: vw-laptop(27);
+    font-size: 27px;
     padding: vw-laptop(13) 1vw;
   }
 
   @media #{$desktop-up} {
-    font-size: vw-desktop(27);
     padding: vw-desktop(13) 1vw;
   }
 
