--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -57,10 +57,16 @@ html
       .ora-dream-hero
         .ora-dream-hero-content
           .ora-dream-hero-bigtext
-          .ora-dream-hero-image
-          .ora-dream-hero-smalltext
-            h3
-              |get started with <br>a free quote on parts, accessories or custom builds
+          .ora-dream-hero-content-sub
+            .ora-dream-hero-image
+            .ora-dream-hero-textbox
+              h3
+                |get started with <br class="ora-br-laptop">a <em>free quote</em> on parts, accessories or custom builds
+              .ora-btn-box
+                a.ora-btn.--dark(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
+                  span
+                    |GET YOUR FREE QUOTE&nbsp;
+                  i.fas.fa-angle-right
         .ora-dream-hero-bg
           .ora-dream-hero-bg-grid
             .ora-dream-hero-bg-grid-item.--rock
@@ -226,7 +232,7 @@ html
                     |c.b. &amp; radio
           .ora-btn-box
             a.ora-btn.--light(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
-              |  BOOK A FREE CONSULTATION
+              |BOOK A FREE CONSULTATION
         .ora-about-right
           a.ora-img-box(href="https://www.financeit.ca/en/direct/payment-plan/cD0xaFdTS3M3NmNMbVI5d0cwcEtGSWV3JnM9MCZ2PTQmZj0mdD0mbD0mYT0yMjczNTM=/apply" title="Financing link")
             img(src="../../assets/images/financeit-ad.png" alt="Apply for financing")
