--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -4,10 +4,75 @@
   background-color: $ora-darkgrey;
 }
 
-// DEV ONLY
-
 .ora-dream-hero-content {
-  display: none;
+  position: absolute;
+  z-index: 6;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 0 0;
+
+  .ora-dream-hero-bigtext {
+    display: block;
+    z-index: 7;
+    width: 100%;
+    max-width: 1100px;
+    height: 100px;
+    background-image: url('../images/p2/dreamhero/build-your-dream-jeep-horizontal.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+
+    @media #{$laptop-only} {
+      width: 75%;
+    }
+  }
+
+  .ora-dream-hero-image {
+    display: block;
+    z-index: 7;
+    width: 700px;
+    max-width: 45vw;
+    height: 520px;
+    background-image: url('../images/p2/dreamhero/hero-jeep-cutout.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+  }
+}
+
+.ora-dream-hero-content-sub {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  margin-top: 50px;
+
+  @media #{$laptop-up} {
+    flex-direction: row;
+  }
+
+  .ora-dream-hero-textbox {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    h3 {
+      text-transform: uppercase;
+
+      @media #{$laptop-up} {
+        margin-bottom: 50px;
+      }
+    }
+
+    .ora-btn-box {
+      width: 80%;
+    }
+  }
 }
 
 // Background Styles
