--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -67,6 +67,10 @@ html
                   span
                     |GET YOUR FREE QUOTE&nbsp;
                   i.fas.fa-angle-right
+                a.ora-btn.--lighter(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
+                  span
+                    |GET YOUR FREE QUOTE&nbsp;
+                  i.fas.fa-angle-right
         .ora-dream-hero-bg
           .ora-dream-hero-bg-grid
             .ora-dream-hero-bg-grid-item.--rock
