--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -2,6 +2,30 @@
   width: 100%;
   position: relative;
   background-color: $ora-darkgrey;
+
+  .ora-btn-box {
+    width: 48%;
+
+    a.--lighter {
+      display: inline-block;
+    }
+
+    a.--dark {
+      display: none;
+    }
+
+    @media #{$laptop-up} {
+      width: 80%;
+
+      a.--lighter {
+        display: none;
+      }
+
+      a.--dark {
+        display: inline-block;
+      }
+    }
+  }
 }
 
 .ora-dream-hero-content {
@@ -21,14 +45,39 @@
     width: 100%;
     max-width: 1100px;
     height: 100px;
-    background-image: url('../images/p2/dreamhero/build-your-dream-jeep-horizontal.png');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
+    background-image: url('../images/p2/dreamhero/build-your.png');
+
+    @media #{$tablet-only} {
+      height: 250px;
+      width: 68%;
+    }
 
     @media #{$laptop-only} {
       width: 75%;
     }
+
+    @media #{$laptop-up} {
+      background-image: url('../images/p2/dreamhero/build-your-dream-jeep-horizontal.png');
+    }
+  }
+}
+
+.ora-dream-hero-content-sub {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  margin-top: 25px;
+
+  @media #{$laptop-up} {
+    margin-top: 50px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
   }
 
   .ora-dream-hero-image {
@@ -41,36 +90,38 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
-  }
-}
+    order: 2;
 
-.ora-dream-hero-content-sub {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  margin-top: 50px;
+    @media #{$tablet-only} {
+      max-width: 60vw;
+      height: 375px;
+      margin-top: 25px;
+    }
 
-  @media #{$laptop-up} {
-    flex-direction: row;
+    @media #{$laptop-up} {
+      order: 1;
+    }
   }
 
   .ora-dream-hero-textbox {
-    width: 350px;
     display: flex;
     flex-direction: column;
     position: relative;
+    width: 68%;
+    order: 1;
+
+    @media #{$laptop-up} {
+      width: 350px;
+      order: 2;
+    }
 
     h3 {
       text-transform: uppercase;
+      margin-bottom: 25px;
 
       @media #{$laptop-up} {
         margin-bottom: 50px;
       }
-    }
-
-    .ora-btn-box {
-      width: 80%;
     }
   }
 }
