--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -6,6 +6,10 @@
   .ora-btn-box {
     width: 48%;
 
+    @media #{$phone-only} {
+      width: 100%;
+    }
+
     a.--lighter {
       display: inline-block;
     }
@@ -39,6 +43,10 @@
   align-items: center;
   padding: 50px 0 0;
 
+  @media #{$phone-only} {
+    padding-top: 15px;
+  }
+
   .ora-dream-hero-bigtext {
     display: block;
     z-index: 7;
@@ -49,6 +57,11 @@
     background-size: 100%;
     background-position: center;
     background-image: url('../images/p2/dreamhero/build-your.png');
+
+    @media #{$phone-only} {
+      height: 175px;
+      width: 84vw;
+    }
 
     @media #{$tablet-only} {
       height: 250px;
@@ -92,6 +105,12 @@
     background-position: center;
     order: 2;
 
+    @media #{$phone-only} {
+      max-width: 90vw;
+      height: 200px;
+      margin-top: 35px;
+    }
+
     @media #{$tablet-only} {
       max-width: 60vw;
       height: 375px;
@@ -110,12 +129,17 @@
     width: 68%;
     order: 1;
 
+    @media #{$phone-only} {
+      width: 84%;
+    }
+
     @media #{$laptop-up} {
       width: 350px;
       order: 2;
     }
 
     h3 {
+      text-shadow: 0 0 47.5px #000000;
       text-transform: uppercase;
       margin-bottom: 25px;
 
