--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -52,19 +52,20 @@
     z-index: 7;
     width: 100%;
     max-width: 1100px;
-    height: 100px;
+    height: 0;
+    padding-top: 35%;
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
     background-image: url('../images/p2/dreamhero/build-your.png');
 
     @media #{$phone-only} {
-      height: 175px;
+      //height: 175px;
       width: 84vw;
     }
 
     @media #{$tablet-only} {
-      height: 250px;
+      //height: 250px;
       width: 68%;
     }
 
@@ -74,6 +75,7 @@
 
     @media #{$laptop-up} {
       background-image: url('../images/p2/dreamhero/build-your-dream-jeep-horizontal.png');
+      padding-top: 7.9%;
     }
   }
 }
@@ -84,7 +86,11 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  margin-top: 25px;
+  margin-top: 5px;
+
+  @media #{$tablet-up} {
+    margin-top: 25px;
+  }
 
   @media #{$laptop-up} {
     margin-top: 50px;
