--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -79,6 +79,35 @@ html
             .ora-dream-hero-bg-grid-item.--ice
           .ora-dream-hero-bg-green
       // Split Section ----------------------------------------:
+      .ora-split
+        .ora-split-left
+          p
+            |Looking for a performance or style upgrade? Always wanted to take your Jeep off road but not sure where to start? Let us take care of all your off roading and customization needs. Go whereever the road takes you and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
+          p
+            |We have a huge selection of aftermarket parts and Jeep accessories for off road enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our certified technicians can make your dream Jeep a reality.
+          span.--bigtext
+            |Get in touch today so we can starting planning your build!
+        .ora-split-right
+          h2
+            |why shop at off road addiction?
+          .ora-title-line
+          ul.--void
+            li.u-uppercase
+              .ora-checkbox
+              span
+                |expert advice on parts & upgrades
+            li.u-uppercase
+              .ora-checkbox
+              span
+                |we install everything we sell
+            li.u-uppercase
+              .ora-checkbox
+              span
+                |in-house certified technicians
+            li.u-uppercase
+              .ora-checkbox
+              span
+                |financing available
       // Builds Section ----------------------------------------:
       // Review Section ----------------------------------------:
       .ora-review
