--- a/assets/styles/p2/p2-split.scss
+++ b/assets/styles/p2/p2-split.scss
@@ -20,11 +20,19 @@
 }
 
 .ora-split-left {
-  width: 50%;
+  width: 100%;
+
+  @media #{$tablet-only} {
+    padding: 60px 0 85px;
+  }
+
+  @media #{$laptop-up} {
+    width: 50%;
+  }
 }
 
 .ora-split-right {
-  width: 50%;
+  width: 100%;
 
   @media #{$laptop-up} {
     width: 50%;
