builds section done at desktop

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -92,23 +92,123 @@ html
             |why shop at off road addiction?
           .ora-title-line
           ul.--void
-            li.u-uppercase
+            li.u-uppercase.u-bold
               .ora-checkbox
-              span
+              span.p
                 |expert advice on parts & upgrades
-            li.u-uppercase
+            li.u-uppercase.u-bold
               .ora-checkbox
               span
                 |we install everything we sell
-            li.u-uppercase
+            li.u-uppercase.u-bold
               .ora-checkbox
               span
                 |in-house certified technicians
-            li.u-uppercase
+            li.u-uppercase.u-bold
               .ora-checkbox
               span
                 |financing available
       // Builds Section ----------------------------------------:
+      .ora-builds
+        .ora-builds-header
+          h6
+            |Start planning your <b>CUSTOM BUILD</b>
+        .ora-builds-tier
+          .ora-builds-tier-left
+            .ora-builds-image.--one
+          .ora-builds-tier-right
+            .ora-builds-tier-info
+              span.ora-tier-subtitle.u-uppercase
+                |stage 1 build
+              span.ora-tier-title
+                |START WITH THE BASICS
+              span.--bigtext
+                |Add a small lift and bigger tires to start feeding your addiction.
+              ul.--void
+                li
+                  .ora-checkbox
+                  span
+                    |Leveling Kit
+                li
+                  .ora-checkbox
+                  span
+                    |New Wheels
+                li
+                  .ora-checkbox
+                  span
+                    |Bigger Tires
+          .ora-builds-tier
+          .ora-builds-tier-left
+            .ora-builds-tier-info.--left
+              span.ora-tier-subtitle.u-uppercase
+                |stage 2 build
+              span.ora-tier-title
+                |LIGHT IT HIGHER
+              span.--bigtext
+                |Take it to the next level with a bigger lift, wider tire stance and accessories that suit your style.
+              ul.--void
+                li
+                  .ora-checkbox
+                  span
+                    |3”- 4” Suspension Lift Kit
+                li
+                  .ora-checkbox
+                  span
+                    |New Wheels
+                li
+                  .ora-checkbox
+                  span
+                    |Bigger Tires
+                li
+                  .ora-checkbox
+                  span
+                    |Front & Rear Bumpers
+                li
+                  .ora-checkbox
+                  span
+                    |Rock Sliders
+          .ora-builds-tier-right
+            .ora-builds-image.--two
+        .ora-builds-tier
+          .ora-builds-tier-left
+            .ora-builds-image.--three
+          .ora-builds-tier-right
+            .ora-builds-tier-info
+              span.ora-tier-subtitle.u-uppercase
+                |stage 3 build
+              span.ora-tier-title
+                |NO LIMITS
+              span.--bigtext
+                |Ready to challenge bigger &amp; badder obstacles than ever before?
+              ul.--void
+                li
+                  .ora-checkbox
+                  span
+                    |4”- 6” Suspension Lift Kit
+                li
+                  .ora-checkbox
+                  span
+                    |New Wheels
+                li
+                  .ora-checkbox
+                  span
+                    |Even Bigger Tires
+                li
+                  .ora-checkbox
+                  span
+                    |Light Bars
+                li
+                  .ora-checkbox
+                  span
+                    |Fender Flares
+                li
+                  .ora-checkbox
+                  span
+                    |Bumpers & Tire Carrier
+                li
+                  .ora-checkbox
+                  span
+                    |Winch
       // Review Section ----------------------------------------:
       .ora-review
         .ora-review-left
