--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -66,10 +66,8 @@ $h5-font-sizes: (
 );
 
 $h6-font-sizes: (
-  null  : vw-phone(14),
-  $tablet-up: vw-tablet(16),
-  $laptop-up: vw-laptop(16),
-  $desktop-up: vw-desktop(16)
+  null  : 30px,
+  $tablet-up: 50px
 );
 
 // Links
@@ -132,6 +130,7 @@ h5,
 h6,
 .h6 {
   @include font-size($h6-font-sizes);
+  font-weight: 300;
 }
 
 .mdev-main-nav-links {
@@ -173,8 +172,13 @@ ul.--void {
   li {
     list-style-type: none;
     padding-bottom: 10px;
-    font-weight: 600;
     display: flex;
     align-items: center;
   }
+
+  li.--nomargin {
+    padding: 0;
+    margin: 0;
+  }
 }
+
