--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -112,7 +112,7 @@ html
       .ora-builds
         .ora-builds-header
           h6
-            |Start planning your <b>CUSTOM BUILD</b>
+            |Start planning your <br class="ora-br-phone"><b>CUSTOM BUILD</b>
         .ora-builds-tier
           .ora-builds-tier-left
             .ora-builds-image.--one
