--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -131,6 +131,7 @@ h6,
 .h6 {
   @include font-size($h6-font-sizes);
   font-weight: 300;
+  line-height: 125%;
 }
 
 .mdev-main-nav-links {
@@ -167,6 +168,14 @@ em {
   }
 }
 
+.ora-br-phone {
+  display: none;
+
+  @media #{$phone-only} {
+    display: inline;
+  }
+}
+
 ul.--void {
 
   li {
@@ -174,11 +183,6 @@ ul.--void {
     padding-bottom: 10px;
     display: flex;
     align-items: center;
-  }
-
-  li.--nomargin {
-    padding: 0;
-    margin: 0;
   }
 }
 
