--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -262,12 +262,8 @@ html
       .ora-about
         .ora-about-left
           .ora-about-blurb
-            .ora-img-box
-              img.ora-about-blurb-banner(src="../../assets/images/aftermarket-parts.png" alt="Aftermarket parts and accessories")
-            p
-              |We only choose products that are tough enough for life on the trails, backed by our quality, in-house installations and service guarantee.
-            p
-              |Long drive to our state-of-the-art facility? Build your dream truck from the comfort of home, if you live in Ontario, we will send our custom trailer to you. Don’t wait, book your free consultation today!
+            h2.u-uppercase.u-newh2
+              |aftermarket parts & Accessories, vehicle upgrades & repairs
           .ora-about-list
             .ora-list-boxes.--left
               .ora-list-box
@@ -364,8 +360,10 @@ html
                   li
                     |c.b. &amp; radio
           .ora-btn-box
-            a.ora-btn.--light(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
-              |BOOK A FREE CONSULTATION
+            a.ora-btn.--lighter(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
+              span
+                |GET YOUR FREE QUOTE&nbsp;
+              i.fas.fa-angle-right
         .ora-about-right
           a.ora-img-box(href="https://www.financeit.ca/en/direct/payment-plan/cD0xaFdTS3M3NmNMbVI5d0cwcEtGSWV3JnM9MCZ2PTQmZj0mdD0mbD0mYT0yMjczNTM=/apply" title="Financing link")
             img(src="../../assets/images/financeit-ad.png" alt="Apply for financing")
