--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -257,6 +257,27 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
       // Quote Section ----------------------------------------:
+      .ora-quote
+        .ora-quote-content
+          .ora-quote-content-left
+          .ora-quote-content-right
+            span.ora-quote-pretitle.u-darkgrey
+              |GET YOUR
+            h3.u-green
+              |FREE QUOTE NOW
+            p.u-darkgrey
+              |Tell us about the aftermarket parts you want to add to your ride. We’ll provide a free quote and advice on the best options to enhance your style and performance.
+            //- Implement Forms Here !!!
+        .ora-quote-bg
+      // Quote Blurb Section ----------------------------------------:
+      .ora-quote-blurb
+        .ora-quote-blurb-content
+          .ora-quote-blurb-left
+          .ora-quote-blurb-right
+            p
+              |We only choose products that are tough enough to use on our own Jeeps - all backed by our quality in-house installations and service guarantee.
+            p
+              |Long drive to our state-of-the-art facility? Build your dream truck from the comfort of home without adding extra kilometers. If you live in Ontario, we’ll send our custom trailer to you. <b>Don’t wait, get a free quote today!</b>
       // Banner Section ----------------------------------------:
       // About Section ----------------------------------------:
       .ora-about
