--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -279,6 +279,13 @@ html
             p
               |Long drive to our state-of-the-art facility? Build your dream truck from the comfort of home without adding extra kilometers. If you live in Ontario, we’ll send our custom trailer to you. <b>Don’t wait, get a free quote today!</b>
       // Banner Section ----------------------------------------:
+      .ora-banner
+        .ora-banner-bg-strip
+          .ora-banner-bg-strip-item
+          .ora-banner-bg-strip-item
+          .ora-banner-bg-strip-item
+          .ora-banner-bg-strip-item
+          .ora-banner-bg-strip-item
       // About Section ----------------------------------------:
       .ora-about
         .ora-about-left
