--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -189,6 +189,7 @@ ul.--void {
 .u-newh2 {
   color: $ora-green;
   font-size: 30.5px;
+  line-height: 120%;
 
   @media #{$tablet-up} {
     font-size: 46px;
