--- a/assets/styles/global-main.scss
+++ b/assets/styles/global-main.scss
@@ -93,6 +93,7 @@
 @import './landingpage/gallery.scss';
 @import './landingpage/hero.scss';
 @import './landingpage/review.scss';
+@import './landingpage/mailing.scss';
 
 /*----
   Print
