--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -9,6 +9,7 @@ body {
   font-family: $main-font;
   font-size: 16px;
   color: $ora-white;
+  background: #222222;
 }
 
 /* Headings & Body Copy */
