Added YT/TW links + small fix to hero

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -51,8 +51,8 @@ html
               .ora-header-socials
                 a.fab.fa-instagram(href="https://www.instagram.com/offroad_addiction_swo" title="Follow us on Instagram")
                 a.fab.fa-facebook-f(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
-                a.fab.fa-twitter(href="/" title="todo")
-                a.fab.fa-youtube(href="/" title="todo")
+                a.fab.fa-twitter(href="https://twitter.com/OFFROADLondon" title="Follow us on Twitter")
+                a.fab.fa-youtube(href="https://www.youtube.com/channel/UCnp6Vnehd1ASDCf7NhG5fFA" title="Check out our channel on YouTube")
       // Hero Section ----------------------------------------:
       .ora-dream-hero
         .ora-dream-hero-content
@@ -479,8 +479,8 @@ html
                 i.fab.fa-instagram
               a.zuc-social-link(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
                 i.fab.fa-facebook-f
-              a.zuc-social-link(href="/" title="todo")
+              a.zuc-social-link(href="https://twitter.com/OFFROADLondon" title="Follow us on Twitter")
                 i.fab.fa-twitter
-              a.zuc-social-link(href="/" title="todo")
+              a.zuc-social-link(href="https://www.youtube.com/channel/UCnp6Vnehd1ASDCf7NhG5fFA" title="Check out Our Channel on YouTube")
                 i.fab.fa-youtube
 
