--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -3,6 +3,13 @@
   position: relative;
   background-color: $ora-darkgrey;
 
+  @media #{$desktop-only} {
+    padding-bottom: 100px;
+  }
+  @media #{$xl-up} {
+    padding-bottom: 300px;
+  }
+
   .ora-btn-box {
     width: 48%;
 
@@ -101,6 +108,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
+  }
+
+  @media #{$xl-up} {
+    margin-top: -15px;
   }
 
   .ora-dream-hero-image {
