Added missing links to the floaty bar

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -6,7 +6,7 @@ html
       // Sticky Bar ----------------------------------------:
       .ora-sticky-bar
         .ora-sticky-buttons
-          .ora-sticky-button.--email
+          a(href="mailto:sales@offroad-addiction.com" title="Get in touch with OffRoad").ora-sticky-button.--email
             .ora-sticky-button-icon
               i.far.fa-envelope
             .ora-sticky-button-text
@@ -16,7 +16,7 @@ html
                 |FREE QUOTE
             .ora-sticky-button-hidden
               |EMAIL
-          .ora-sticky-button.--phone
+          a(href="tel:+5194516076" title="Get in touch with us!").ora-sticky-button.--phone
             .ora-sticky-button-icon
               i.fas.fa-mobile-alt
             .ora-sticky-button-text
