--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -4,7 +4,7 @@
   background-color: $ora-darkgrey;
 
   @media #{$desktop-only} {
-    padding-bottom: 100px;
+    padding-bottom: 5px;
   }
   @media #{$xl-up} {
     padding-bottom: 300px;
@@ -104,7 +104,6 @@
   }
 
   @media #{$laptop-up} {
-    margin-top: 50px;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
@@ -117,10 +116,8 @@
   .ora-dream-hero-image {
     display: block;
     z-index: 7;
-    width: 100%;
-    max-width: 45vw;
-    height: 0;
-    padding-top: 30.12%;
+    width: 650px;
+    height: 450px;
     background-image: url('../images/p2/dreamhero/hero-jeep-cutout.png');
     background-repeat: no-repeat;
     background-size: 100%;
@@ -136,11 +133,9 @@
     }
 
     @media #{$tablet-only} {
-      max-width: 70vw;
-      height: 0;
+      width: 650px;
+      height: 450px;
       margin-top: 0;
-      padding-top: 55%;
-      width: 100%;
     }
 
     @media #{$laptop-up} {
@@ -193,7 +188,7 @@
 
 .ora-dream-hero-bg-grid-item {
   width: 50%;
-  height: vw-phone(175);
+  height: 175px;
   background-color: #202020;
   background-size: cover;
   background-repeat: no-repeat;
@@ -226,14 +221,14 @@
 
 .ora-dream-hero-bg-green {
   width: 100%;
-  height: 125px;
+  height: 100px;
   background-color: $ora-green;
 
   @media #{$tablet-only} {
-    height: vw-tablet(100);
+    height: 135px;
   }
 
   @media #{$laptop-up} {
-    height: 200px;
+    height: 150px;
   }
 }
