--- a/assets/styles/p2/p2-quote.scss
+++ b/assets/styles/p2/p2-quote.scss
@@ -61,6 +61,8 @@
 
   .ora-quote-pretitle {
     font-weight: 600;
+    margin-bottom: 10px;
+    display: block;
   }
 }
 
@@ -78,7 +80,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 25px 8%;
+  padding: 75px 8% 25px;
   width: 100%;
 
   @media #{$laptop-up} {
