--- a/assets/styles/p2/p2-quote.scss
+++ b/assets/styles/p2/p2-quote.scss
@@ -80,12 +80,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 75px 8% 25px;
+  padding: 75px 5% 25px;
   width: 100%;
+
+  @media #{$tablet-only} {
+    padding: 75px 5%;
+  }
 
   @media #{$laptop-up} {
     padding: 50px 25px;
-    width: 800px;
+    width: 1000px;
   }
 }
 
