--- a/assets/styles/landingpage/footer.scss
+++ b/assets/styles/landingpage/footer.scss
@@ -36,7 +36,7 @@
   padding: 0 0 vw-phone(75) 0;
 
   @media #{$tablet-up} {
-    padding: 0 0 vw-tablet(100) 0;
+    padding: 0 0 vw-tablet(70) 0;
   }
 
   @media #{$laptop-up} {
@@ -45,7 +45,7 @@
   }
 
   @media #{$desktop-up} {
-    width: vw-desktop(410);
+    width: vw-desktop(440);
     padding: 0 vw-desktop(50) 0 0;
   }
 
@@ -54,7 +54,7 @@
   }
 
   p {
-    font-size: vw-phone(12);
+    font-size: 18px;
 
     @media #{$tablet-up} {
       font-size: vw-tablet(20);
@@ -160,6 +160,7 @@
       font-family: $main-font;
       text-decoration: underline;
       transition: .4s;
+      font-weight: 700;
 
       &:hover {
         color: $ora-green;
@@ -187,6 +188,11 @@
       line-height: 130%;
       font-size: vw-phone(22);
       width: 20px;
+      transition: all .4s;
+
+      &:hover {
+        color: #ccc;
+      }
 
       @media #{$tablet-up} {
         font-size: vw-tablet(22);
@@ -202,3 +208,4 @@
     }
   }
 }
+
