--- a/assets/styles/landingpage/mailing.scss
+++ b/assets/styles/landingpage/mailing.scss
@@ -13,7 +13,11 @@
   width: 90%;
   margin: 0 auto;
 
-  @media #{$tablet-up} {
+  @media #{$tablet-only} {
+    width: 80%;
+  }
+
+  @media #{$laptop-up} {
     width: 65%;
   }
 
@@ -22,17 +26,24 @@
     font-size: 46px;
     line-height: 1.15;
     font-weight: 400;
+
+    @media #{$phone-only} {
+      font-size: 30px;
+    }
   }
 
   .ora-mailing-subheader {
-    font-family: $spec-font;
     width: 100%;
     display: block;
     margin: 10px auto 0;
     font-size: 30px;
     line-height: normal;
 
-    @media #{$tablet-up} {
+    @media #{$phone-only} {
+      font-size: 18px;
+    }
+
+    @media #{$laptop-up} {
       width: 50%;
     }
   }
