--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -429,7 +429,7 @@ html
           #mc_embed_signup
             form#mc-embedded-subscribe-form.validate(action="https://offroad-addiction.us9.list-manage.com/subscribe/post?u=fa835280d7e52207971079617&amp;id=961e94c97c" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate)
               #mc_embed_signup_scroll.flex.flex-hor-between.flex-vert-center
-                input#mce-FNAME(type="text" value="" name="FNAME" placeholder="First Name")
+                input#mce-FNAME(type="text" value="" name="FNAME" placeholder="First Name *")
                 input#mce-EMAIL.required.email(type="email" value="" name="EMAIL" placeholder="Email Address *")
                 //-
                   .mc-field-group
@@ -475,12 +475,12 @@ html
               p
                 |Phone: 519-451-6076<br/>Toll Free: 1-877-309-7623<br/>Fax: 519-637-7373
             .ora-footer-contact-box
-              a.zuc-social-link(href="https://www.instagram.com/offroad_addiction_swo" title="Follow us on Instagram")
+              a.ora-social-link(href="https://www.instagram.com/offroad_addiction_swo" title="Follow us on Instagram")
                 i.fab.fa-instagram
-              a.zuc-social-link(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
+              a.ora-social-link(href="https://www.facebook.com/ORAddiction" title="Like us on Facebook")
                 i.fab.fa-facebook-f
-              a.zuc-social-link(href="https://twitter.com/OFFROADLondon" title="Follow us on Twitter")
+              a.ora-social-link(href="https://twitter.com/OFFROADLondon" title="Follow us on Twitter")
                 i.fab.fa-twitter
-              a.zuc-social-link(href="https://www.youtube.com/channel/UCnp6Vnehd1ASDCf7NhG5fFA" title="Check out Our Channel on YouTube")
+              a.ora-social-link(href="https://www.youtube.com/channel/UCnp6Vnehd1ASDCf7NhG5fFA" title="Check out Our Channel on YouTube")
                 i.fab.fa-youtube
 
